test/fixtures/basic/entry.js
'use strict';

require('chalk');

// warning
// console.log(require);

// error
// if (!window) { require('test'); }
